# land-bot

./: .gitignore  Cargo.toml  README.md  config.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  settings.rs
crates/api/src/commands/: crawl.rs  migrate.rs  mod.rs  serve.rs
crates/api/src/path/: mod.rs  v1.rs
crates/api/src/path/handlers/: hello.rs
crates/api/src/state/: mod.rs
crates/chat/: Cargo.toml
crates/chat/src/: main.rs  tests.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: lib.rs  main.rs  moi.rs  settings.rs
crates/crawler/src/commands/: hello.rs  migrate.rs  mod.rs  moi.rs
crates/entity/: Cargo.toml
crates/entity/src/: conversation.rs  lib.rs  qa.rs
crates/faq_crawler/: Cargo.toml
crates/faq_crawler/src/: lib.rs  main.rs
crates/faq_crawler/src/commands/: mod.rs  moi.rs
crates/llm/: Cargo.toml  pyproject.toml
crates/llm/llm_handler/: __init__.py
crates/llm/src/: main.rs
crates/migration/src/: m20220101_000001_create_table.rs
src/: main.rs
