[package]
name = "land-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
